[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Use a slightly different name to avoid conflict with pre-existing package in pypi
name = "ingredient_parser_nlp"
dynamic = ["version"]
description = "A Python package to parse structured information from recipe ingredient sentences"
readme = "README.md"
license = { file="LICENSE"}
requires-python = ">=3.10, <=3.12"
keywords = ["recipe", "ingredient", "ingredients", "nlp", "parsing" ]
authors = [
    { name="Tom Strange", email="tpstrange@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "nltk",
    "python-crfsuite",
]

[project.urls]
Homepage = "https://github.com/strangetom/ingredient-parser/"
Documentation = "https://ingredient-parser.readthedocs.io/en/latest/"
Source = "https://github.com/strangetom/ingredient-parser"

[tool.setuptools]
packages = ["ingredient_parser", "ingredient_parser.preprocess", "ingredient_parser.postprocess"]

[tool.setuptools.dynamic]
version =  {attr = "ingredient_parser.__version__"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*"
]

[tool.black]
target-version = ["py310", "py311", "py312"]
include = "\\.py$"
extend-exclude = "\\.ipynb$"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E402"]
exclude = [
    "**/__pycache__",
    ".git",
    "venv"
]
line-length = 88

[tool.pyright]
include = ["ingredient_parser"]
exclude = ["**/__pycache__"]
reportUnusedImport = true
reportUnusedClass = true
reportUnuedFunction = true
reportUnusedVariable = true
reportWildcardImportFromLibrary = true
reportPrivateUsage = true